# polaris-quant

./: .gitignore  README.md  compose.env.example  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260602_0000_init_core_schema.py  20260603_0001_add_batch_backtests.py  20260604_0002_strategy_autotrading.py  20260604_0003_add_buy_hold_benchmark.py  20260605_0004_add_backtest_position_size.py  20260606_0005_add_market_data_cache.py  20260606_0006_add_market_data_pause_resume.py  20260609_0007_archive_strategy_instances.py  20260609_0008_unambiguous_weekday_cron.py  20260610_0009_broker_env_isolation.py  20260617_0010_order_stop_prices_client_ids.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/brokers/: base.py  factory.py
backend/app/core/: config.py  i18n.py  logging.py  security.py
backend/app/db/: base.py  base_all.py  init_db.py  seed_dev_user.py  session.py
backend/tests/: batch_backtest_helpers.py  conftest.py  smoke_helpers.py  test_alpaca_order_mapping.py  test_alpaca_rate_limit.py  test_api_smoke.py  test_auth.py  test_auto_trading.py  test_batch_backtest.py  test_batch_backtest_api.py  test_batch_backtest_services.py  test_batch_backtest_worker.py  test_broker_env_isolation.py  test_market_data_api.py  test_market_data_queue.py  test_market_data_services.py  test_migrations.py  test_orders_api.py  test_position_sizing.py  test_scheduler.py  test_smoke.py  test_strategy_api.py  test_strategy_smoke.py
deploy/: nginx.conf
(+189 files in other folders)
