[project]
name = "polaris-quant-backend"
version = "0.1.0"
description = "Polaris Quant — backend API and strategy engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",          # PostgreSQL driver (production)
    "pyjwt>=2.10",                    # JWT auth
    "passlib[bcrypt]>=1.7",           # password hashing
    "cryptography>=44.0",             # Fernet encryption for broker tokens
    "apscheduler>=3.11",              # background scheduler
    "alpaca-py>=0.33",                # Alpaca broker SDK
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
